--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
 
-        <header class="header ">
+        <header class="header hidden fade-in-1 ">
           <nav class="header-wrapper">
             <ul class="main-menu">
               <li class="main-menu-item"><a href="#skills" class="main-menu-link">Skills</a></li>
@@ -21,67 +21,50 @@
             </ul>
           </nav>
           <div class="hamburger">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
+            <div class="bar1"></div>
+            <div class="bar2"></div>
+            <div class="bar3"></div>
           </div>
         </header>
         
         <main class="main">
           <div class="main-wrapper">
   
-            <section class="summary ">
+            <section class="summary hidden fade-in-2">
               <div class="summary-wrapper">
                 <img class="summary__avatar" src="images/photo.jpg" alt="Avatar">
                 <div class="summary__text">
                   <h1 class="summary__title">Olga Shvets</h1>
                   <span class="summary__subtitle">Trainee/Junior front-end developer</span>
                   <p class="summary__more"><span class="selected">Summary:</span> Hi, I am a person trying to change profession to frontend developer. My aim is to get comprehensive knowledge in frontend and to find people with the same ambitions. I'am also interested in career growth in this particular area.</p>
+                  <p>Kherson, Ukraine</p>
                 </div>
               </div>
               <div class="contacts__wrapper">
                 <ul class="contacts__list">
-                  <li class="contacts__item contacts__place">
-                    <svg class="icon-place" width="20" height="20">
-                      <title>City</title>
-                      <use href="img/sprite.svg#tool"></use>
-                    </svg>Kherson, Ukraine
-                  </li>
                   <li class="contacts__item contacts__link">
                     <a class="contacts__item__wrapper" href="tel:+380667342826">
-                      <svg class="icon-phone" width="20" height="20">
-                        <title>Phone</title>
-                        <use href="img/sprite.svg#phone"></use>
-                      </svg>
-                      <span>+38 (066) 734-28-26</span>
+                      <img src="https://img.icons8.com/ios-glyphs/30/000000/phone--v1.png" alt="Phone"/>
+                     <span>+38 (066) 734-28-26</span>
                     </a>
                   </li>
                   <li class="contacts__item contacts__link">
                     <a class="contacts__item__wrapper" href="mailto:olgashvez84@gmail.com">
-                      <svg class="icon-email" width="20" height="20">
-                        <title>Email</title>
-                        <use href="img/sprite.svg#email"></use>
-                      </svg>
+                      <img src="https://img.icons8.com/plasticine/50/000000/new-post.png" alt="Email"/>
                       <span>olgashvez84@gmail.com</span>
                     </a>
                   </li>
                   <li class="contacts__item contacts__link">
                     <a class="contacts__item__wrapper" href="https://t.me/Olga_Shvets84" target="_blank">
-                      <svg class="icon-telegram" width="20" height="20">
-                        <title>Telegram</title>
-                        <use href="img/sprite.svg#telegram"></use>
-                      </svg>
-                      <span>Olga_Shvets84</span>
+                       <img src="https://img.icons8.com/nolan/50/telegram-app.png" alt="Telegram"/>
+                       <span>Olga_Shvets84</span>
                     </a>
                   </li>
                   <li class="contacts__item contacts__link">
-                  <a class="contacts__item__wrapper" href="https://github.com/WebdevOlgaShvez" target="_blank">
-                    <svg class="icon-github" width="20" height="20">
-                      <title>Github</title>
-                      <use href="img/sprite.svg#github-logo"></use>
-                    </svg>
-                    <span>WebdevOlgaShvez</span>
-                  </a>
+                    <a class="contacts__item__wrapper" href="https://github.com/WebdevOlgaShvez" target="_blank">
+                        <img src="https://img.icons8.com/nolan/50/github.png" alt="Github"/>
+                        <span>WebdevOlgaShvez</span>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -103,9 +86,9 @@
             <section class="projects" id="projects">
               <h2 class="projects__title">Recent projects:</h2>
               <div class="section-wrapper">
-                <ul class="skills__list">
-                  <li class="skills__item"><a href="/examples/js slider/index.html" target="_blank" rel="noopener noreferrer">JS Slider</a></li>
-                  <li class="skills__item"><a href="/examples/js-clock/index.html" target="_blank" rel="noopener noreferrer">JS Clock</a></li>
+                <ul class="">
+                  <li class=""><a href="/examples/js slider/index.html" target="_blank" rel="noopener noreferrer">JS Slider</a></li>
+                  <li class=""><a href="/examples/js-clock/index.html" target="_blank" rel="noopener noreferrer">JS Clock</a></li>
                 </ul>
               </div>
             </section>
@@ -123,10 +106,10 @@
               <h2 class="education__title">Education:</h2>
               <div class="section-wrapper">
                 <ul class="">
-                  <li class="">Kherson National Technical University (Ukraine)</li>
-                  <li class="">Wezom School of Skills. Course – Testing of software</li>
-                  <li class="">Oktenweb school. Course - JavaScript Complex</li>
                   <li class="">Self - Education</li>
+                  <li class="">Oktenweb school. Course - JavaScript Complex</li>
+                  <li class="">Wezom School of Skills. Course – Testing of software</li>
+                  <li class="">Kherson National Technical University (Ukraine)</li>
                 </ul>
                 
               </div>
@@ -160,6 +143,6 @@
       <div id="overlay"></div>
       <div class="button-up"></div>
   
-      <script src="js/main.js"></script>
+      <script src="main.js"></script>
 </body>
 </html>
